--- a/TibiaHeleper/Windows/Menu.xaml
+++ b/TibiaHeleper/Windows/Menu.xaml
@@ -10,14 +10,16 @@
     <Grid Margin="0,0,0.4,-0.2">
         <Button x:Name="Healer" Content="Healer" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="97" Click="HealerButtonClicked"/>
         <CheckBox x:Name="HealerEnable" Content="Enable Healer" HorizontalAlignment="Left" Margin="125,12,0,0" VerticalAlignment="Top" Checked="HealerRun" Unchecked="HealerDisable" Width="127" />
-        <Button x:Name="AdditionalModulesButton" Content="Other" HorizontalAlignment="Left" Margin="10,124,0,0" VerticalAlignment="Top" Width="97" Click="OpenAdditionalModulesWindow"/>
-        <Button x:Name="SaveButton" Content="Save" HorizontalAlignment="Left" Margin="10,165,0,0" VerticalAlignment="Top" Width="97" Click="Save"/>
-        <Button x:Name="LoadButton" Content="Load" HorizontalAlignment="Left" Margin="10,207,0,0" VerticalAlignment="Top" Width="97" Click="Load"/>
+        <Button x:Name="AdditionalModulesButton" Content="Other" HorizontalAlignment="Left" Margin="10,172,0,0" VerticalAlignment="Top" Width="97" Click="OpenAdditionalModulesWindow"/>
+        <Button x:Name="SaveButton" Content="Save" HorizontalAlignment="Left" Margin="10,208,0,0" VerticalAlignment="Top" Width="97" Click="Save"/>
+        <Button x:Name="LoadButton" Content="Load" HorizontalAlignment="Left" Margin="10,232,0,0" VerticalAlignment="Top" Width="97" Click="Load"/>
         <Button x:Name="Targeting" Content="Targeting" HorizontalAlignment="Left" Margin="10,53,0,0" VerticalAlignment="Top" Width="97" Click="TargetingButtonClicked"/>
         <Button x:Name="WalkerButton" Content="Walker" HorizontalAlignment="Left" Margin="10,89,0,0" VerticalAlignment="Top" Width="97" Click="WalkerButtonClicked"/>
         <CheckBox x:Name="TargetingEnable" Content="Enable Targeting" HorizontalAlignment="Left" Margin="125,55,0,0" VerticalAlignment="Top" Width="127" Checked="TargetingRun" Unchecked="TargetingDisable"/>
-        <Button x:Name="TestButton" Content="Test" HorizontalAlignment="Left" Margin="10,272,0,0" VerticalAlignment="Top" Width="97" Click="Test"/>
+        <Button x:Name="TestButton" Content="Test" HorizontalAlignment="Left" Margin="10,292,0,0" VerticalAlignment="Top" Width="97" Click="Test"/>
         <CheckBox x:Name="WalkerEnable" Content="Enable Walker" HorizontalAlignment="Left" Margin="125,93,0,0" VerticalAlignment="Top" Width="97" Checked="WorkerRun" Unchecked="WorkerDisable"/>
-        <Button x:Name="HelpButton" Content="Help" HorizontalAlignment="Left" Margin="10,239,0,0" VerticalAlignment="Top" Width="97" Click="OpenHelpWindow"/>
+        <Button x:Name="HelpButton" Content="Help" HorizontalAlignment="Left" Margin="10,268,0,0" VerticalAlignment="Top" Width="97" Click="OpenHelpWindow"/>
+        <Button x:Name="AlarmsButton" Content="Alarms" HorizontalAlignment="Left" Margin="10,126,0,0" VerticalAlignment="Top" Width="97" Click="OpenAlarmsWindow"/>
+        <CheckBox x:Name="alarmsCheckBox" Content="Enable Alarms" HorizontalAlignment="Left" Margin="125,126,0,0" VerticalAlignment="Top" Width="127" Checked="AlarmEnable" Unchecked="AlarmDisable"/>
     </Grid>
 </Window>
