--- a/TibiaHeleper/Windows/AdditionalModules.xaml
+++ b/TibiaHeleper/Windows/AdditionalModules.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TibiaHeleper.Windows"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
         Title="Other" Height="300" Width="400"
         Loaded="AssignData" Closed="Close">
     <Grid Margin="0,0,-24.4,0.4" Width="400">
@@ -33,9 +34,9 @@
             <TextBox x:Name="APMana" HorizontalAlignment="Left" Height="23" Margin="214,32,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="65"/>
             <CheckBox x:Name="APEnable" Content="Enable" HorizontalAlignment="Left" Margin="300,37,0,0" VerticalAlignment="Top" Checked="EnableAntyParalyse" Unchecked="DisableAntyParalyse"/>
         </Grid>
-        <Grid Name="Error" HorizontalAlignment="Left" Height="275" VerticalAlignment="Top" Width="400" Background="White" Visibility="Hidden">
-            <Label x:Name="ErrorLabel" Content="Unacceptable value" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="0,10,0,0" VerticalAlignment="Top" Width="300" Height="177"/>
-            <Button x:Name="errBtn" Content="OK" HorizontalAlignment="Left" Margin="115,217,0,0" VerticalAlignment="Top" Width="75" Click="HideErrorGrid"/>
+        <Grid Name="Error" HorizontalAlignment="Right" Height="275" VerticalAlignment="Top" Width="400" Background="White" Visibility="Hidden" Margin="0,0,0,-5">
+            <Label x:Name="ErrorLabel" Content="Unacceptable value" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="0,10,0,0" VerticalAlignment="Top" Width="400" Height="177"/>
+            <Button x:Name="errBtn" Content="OK" HorizontalAlignment="Left" Margin="163,215,0,0" VerticalAlignment="Top" Width="75" Click="HideErrorGrid" RenderTransformOrigin="1.355,0.125"/>
         </Grid>
     </Grid>
 </Window>
