--- a/TibiaHeleper/Windows/AlarmsWindow.xaml
+++ b/TibiaHeleper/Windows/AlarmsWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TibiaHeleper.Windows"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
         Title="Alarms" Height="300" Width="250"
         Loaded="Load" Closing="Close">
     <Grid>
@@ -17,10 +18,10 @@
         <Button x:Name="saveButton" Content="Save" HorizontalAlignment="Left" Margin="38,241,0,0" VerticalAlignment="Top" Width="75" Click="Save"/>
         <Button x:Name="backButton" Content="Back" HorizontalAlignment="Left" Margin="118,241,0,0" VerticalAlignment="Top" Width="75" Click="Back"/>
 
-        <Grid Name="Error" HorizontalAlignment="Left" Height="275" VerticalAlignment="Top" Width="400" Background="White" Visibility="Hidden">
-            <Label x:Name="ErrorLabel" Content="Error" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="0,10,0,0" VerticalAlignment="Top" Width="300" Height="177"/>
-            <Button x:Name="errBtn" Content="OK" HorizontalAlignment="Left" Margin="115,217,0,0" VerticalAlignment="Top" Width="75" Click="HideErrorGrid"/>
+        <Grid Name="Error" HorizontalAlignment="Left" Height="275" VerticalAlignment="Top" Width="243" Background="White" Visibility="Hidden" Margin="0,0,0,-4.6">
+            <Label x:Name="ErrorLabel" Content="Error" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="-1,0,0,0" VerticalAlignment="Top" Width="244" Height="187"/>
+            <Button x:Name="errBtn" Content="OK" HorizontalAlignment="Left" Margin="88,219,0,0" VerticalAlignment="Top" Width="75" Click="HideErrorGrid"/>
         </Grid>
-        
+
     </Grid>
 </Window>
