--- a/TibiaHeleper/Windows/HealerWindow.xaml
+++ b/TibiaHeleper/Windows/HealerWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TibiaHeleper.Windows"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
         Title="Healer" Height="350.0" Width="400.0"
         Loaded="SetValues" Closing="Close">
     <Grid HorizontalAlignment="Left" Width="400">
@@ -37,9 +38,9 @@
         <TextBox x:Name="highMana" HorizontalAlignment="Left" Height="23" Margin="92,206,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="53"/>
         <TextBox x:Name="hMB" HorizontalAlignment="Left" Height="23" Margin="166,206,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="86"/>
 
-        <Grid Name="Error" HorizontalAlignment="Left" Height="275" VerticalAlignment="Top" Width="400" Background="White" Visibility="Hidden">
-            <Label x:Name="ErrorLabel" Content="Error" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="0,10,0,0" VerticalAlignment="Top" Width="300" Height="177"/>
-            <Button x:Name="errBtn" Content="OK" HorizontalAlignment="Left" Margin="115,217,0,0" VerticalAlignment="Top" Width="75" Click="HideErrorGrid"/>
+        <Grid Name="Error" HorizontalAlignment="Left" Height="321" VerticalAlignment="Top" Width="400" Background="White" Visibility="Hidden" Margin="0,0,0,-0.2">
+            <Label x:Name="ErrorLabel" Content="Error" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="0,0,10,0" VerticalAlignment="Top" Width="390" Height="177"/>
+            <Button x:Name="errBtn" Content="OK" HorizontalAlignment="Left" Margin="163,257,0,0" VerticalAlignment="Top" Width="75" Click="HideErrorGrid" RenderTransformOrigin="1.392,1.76"/>
         </Grid>
     </Grid>
 </Window>
