--- a/TibiaHeleper/Windows/Menu.xaml
+++ b/TibiaHeleper/Windows/Menu.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TibiaHeleper.Windows"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
          Title="TibiaHelper" Height="350" Width="525" 
         Loaded="Window_Loaded" Closing="Close">
     <Grid Margin="0,0,0.4,-0.2">
