--- a/TibiaHeleper/Windows/Targeting.xaml
+++ b/TibiaHeleper/Windows/Targeting.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TibiaHeleper.Windows"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
         Title="Targeting" Height="400" Width="652.986"
         Loaded="Load" Closing="Close">
     <Grid>
@@ -27,7 +28,7 @@
         <Button x:Name="saveButton" Content="Save" HorizontalAlignment="Left" Margin="208,340,0,0" VerticalAlignment="Top" Width="65" Click="Save"/>
         <Button x:Name="editButton" Content="Apply edit" HorizontalAlignment="Left" Margin="22,295,0,0" VerticalAlignment="Top" Width="75" Click="Edit"/>
 
-        
+
 
         <CheckBox x:Name="FollowTargetCheckBox" Content="Follow Target" HorizontalAlignment="Left" Margin="134,258,0,0" VerticalAlignment="Top" Width="140" Height="18"/>
         <CheckBox x:Name="DiagonalCheckBox" Content="Stay Diagonal" HorizontalAlignment="Left" Margin="134,235,0,0" VerticalAlignment="Top" Width="140"/>
@@ -50,10 +51,10 @@
         <Label x:Name="ActualNextContainerLabel" Content="Next backpack: " HorizontalAlignment="Left" Margin="405,309,0,0" VerticalAlignment="Top" Width="225"/>
         <CheckBox x:Name="OpenNextContainerCheckBox" Content="Open next backpack" HorizontalAlignment="Left" Margin="405,264,0,0" VerticalAlignment="Top" Height="15" Width="225"/>
 
-        <Grid Name="Error" HorizontalAlignment="Left" Height="275" VerticalAlignment="Top" Width="400" Background="White" Visibility="Hidden">
-            <Label x:Name="ErrorLabel" Content="Error" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="0,10,0,0" VerticalAlignment="Top" Width="300" Height="177"/>
-            <Button x:Name="errBtn" Content="OK" HorizontalAlignment="Left" Margin="115,217,0,0" VerticalAlignment="Top" Width="75" Click="HideErrorGrid"/>
+        <Grid Name="Error" HorizontalAlignment="Left" Height="370" VerticalAlignment="Top" Width="646" Background="White" Visibility="Hidden">
+            <Label x:Name="ErrorLabel" Content="Error" Foreground="Red" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="626" Height="223"/>
+            <Button x:Name="errBtn" Content="OK" HorizontalAlignment="Left" Margin="276,281,0,0" VerticalAlignment="Top" Width="75" Click="HideErrorGrid"/>
         </Grid>
-        
+
     </Grid>
 </Window>
